comp/resume-detail fixing