@@ -3,6 +3,7 @@ package shop.mtcoding.blog.domain.resume;
 import lombok.Builder;
 import lombok.Data;
 import shop.mtcoding.blog.domain.apply.Apply;
+import shop.mtcoding.blog.domain.jobs.Jobs;
 import shop.mtcoding.blog.domain.skill.Skill;
 import shop.mtcoding.blog.domain.user.User;
 
@@ -34,29 +35,38 @@ public class ResumeResponse {
     }
 
     @Data // comp-manage페이지에 뿌려지는 resume용 DTO
-    public static class CmrDTO {
+    public static class CompManageDTO {
         private Integer id;
-        //resume
         private String title;
         private String edu;
         private String career;
         private String area;
         private Integer resumeId;
-        //apply
         private String isPass;
-        //skillList
-        private List<SkillDTO2> skillList;
+        private Integer jobsId;
+        private List<SkillDTO> skillList;
 
         @Builder
-        public CmrDTO(Resume resume, Apply apply, List<Skill> skillList) {
+        public CompManageDTO(Resume resume, Apply apply, Jobs jobs, List<Skill> skillList) {
             this.title = resume.getTitle();
             this.edu = resume.getEdu();
             this.career = resume.getCareer();
             this.area = resume.getArea();
             this.resumeId = resume.getId();
             this.isPass = apply.getIsPass();
-            this.skillList = skillList.stream().map(SkillDTO2::new)
-                    .collect(Collectors.toList());
+            this.jobsId = jobs.getId();
+            this.skillList = skillList.stream().map(SkillDTO::new).toList();
+        }
+
+        @Data
+        public class SkillDTO {
+            private Integer id;
+            private String name;
+
+            public SkillDTO(Skill skill) {
+                this.id = skill.getId();
+                this.name = skill.getName();
+            }
         }
     }
 
@@ -72,7 +82,7 @@ public class ResumeResponse {
         private List<UpdateSkill> skillList;
 
         @Builder
-        public UpdateDTO(Resume resume,List<Skill> skills) {
+        public UpdateDTO(Resume resume, List<Skill> skills) {
             this.title = resume.getTitle();
             this.area = resume.getArea();
             this.edu = resume.getEdu();
@@ -110,10 +120,9 @@ public class ResumeResponse {
         private String career;
         private String portLink;
         private Integer userId;
-        private List<SkillDTO2> skills;
+        private List<SkillDTO> skills;
 
         @Builder
-
         public DetailDTO2(Integer id, String title, String edu, String introduce, String imgFileName, String myName, LocalDate birth, String phone, String email, String address, String area, String career, String portLink, Integer userId, List<Skill> skills) {
             this.id = id;
             this.title = title;
@@ -130,8 +139,18 @@ public class ResumeResponse {
             this.portLink = portLink;
             this.userId = userId;
             this.skills = skills.stream()
-                    .map(skill -> new SkillDTO2(skill))
-                    .collect(Collectors.toList());
+                    .map(SkillDTO::new).toList();
+        }
+
+        @Data
+        public class SkillDTO {
+            private Integer id;
+            private String name;
+
+            public SkillDTO(Skill skill) {
+                this.id = skill.getId();
+                this.name = skill.getName();
+            }
         }
     }
 
@@ -151,10 +170,9 @@ public class ResumeResponse {
         private String career;
         private String portLink;
         private Integer userId;
-        private List<SkillDTO2> skills;
+        private List<SkillDTO> skills;
 
         @Builder
-
         public CompDetailDTO2(Integer id, String title, String edu, String introduce, String imgFileName, String myName, LocalDate birth, String phone, String email, String address, String area, String career, String portLink, Integer userId, List<Skill> skills) {
             this.id = id;
             this.title = title;
@@ -171,14 +189,73 @@ public class ResumeResponse {
             this.portLink = portLink;
             this.userId = userId;
             this.skills = skills.stream()
-                    .map(skill -> new SkillDTO2(skill))
-                    .collect(Collectors.toList());
+                    .map(skill -> new SkillDTO(skill)).toList();
+        }
+
+        @Data
+        public class SkillDTO {
+            private Integer id;
+            private String name;
+
+            public SkillDTO(Skill skill) {
+                this.id = skill.getId();
+                this.name = skill.getName();
+            }
         }
     }
 
-    //이력서 상세보기 DTO
     @Data
     public static class DetailDTO {
+        private Integer resumeId;
+        private String imgFileName;
+        private String myName;
+        private LocalDate birth;
+        private String phone;
+        private String email;
+        private String address;
+        private String area;
+        private String title;
+        private String edu;
+        private String introduce;
+        private String career;
+        private String portLink;
+        private List<SkillDTO> skills;
+        private Boolean isOwner = false;
+
+        @Builder
+        public DetailDTO(Resume resume, User user, List<Skill> skills, Boolean isOwner) {
+            this.resumeId = resume.getId();
+            this.area = resume.getArea();
+            this.title = resume.getTitle();
+            this.edu = resume.getEdu();
+            this.introduce = resume.getIntroduce();
+            this.career = resume.getCareer();
+            this.portLink = resume.getPortLink();
+            this.imgFileName = user.getImgFileName();
+            this.myName = user.getMyName();
+            this.birth = user.getBirth();
+            this.phone = user.getPhone();
+            this.email = user.getEmail();
+            this.address = user.getAddress();
+            this.isOwner = isOwner;
+            this.skills = skills.stream().map(SkillDTO::new).toList();
+        }
+
+        @Data
+        public class SkillDTO {
+            private Integer id;
+            private String name;
+
+            public SkillDTO(Skill skill) {
+                this.id = skill.getId();
+                this.name = skill.getName();
+            }
+        }
+    }
+
+    //이력서 상세보기 DTO2
+    @Data
+    public static class DetailDTO3 {
         private Integer id;
         private Integer jobsId;
         private String title;
@@ -201,10 +278,10 @@ public class ResumeResponse {
         private Boolean isPass;
         private Boolean isFail;
         private Boolean isWaiting;
-        private List<SkillDTO2> skills;
+        private List<SkillDTO> skills;
 
         @Builder
-        public DetailDTO(Resume resume, Integer jobsId, String isApply, User user, Integer role, List<Skill> skills) {
+        public DetailDTO3(Resume resume, Integer jobsId, String isApply, User user, Integer role, List<Skill> skills) {
             this.id = resume.getId();
             this.jobsId = jobsId;
             this.title = resume.getTitle();
@@ -228,7 +305,7 @@ public class ResumeResponse {
             this.isFail = false;
             this.isWaiting = false;
             this.skills = skills.stream()
-                    .map(skill -> new SkillDTO2(skill))
+                    .map(SkillDTO::new)
                     .collect(Collectors.toList());
 
             if (this.role == 1) {
@@ -245,44 +322,15 @@ public class ResumeResponse {
                 this.isWaiting = true;
             }
         }
-    }
+        @Data
+        public class SkillDTO {
+            private Integer id;
+            private String name;
 
-    @Data
-    public static class SkillDTO2 {
-        private Integer id;
-        private String name;
-        private String color;
-
-        public SkillDTO2(Skill skill) {
-            this.id = skill.getId();
-            this.name = skill.getName();
-
-            // 혹시 언어 추가할게 있으면 else if랑 컬러, 같은 양식 맞춰서 추가가능
-            if (this.name.equals("Jquery")) {
-                this.color = "badge badge-pill bg-primary";
-            } else if (this.name.equals("JavaScript")) {
-                this.color = "badge badge-pill bg-secondary";
-            } else if (this.name.equals("Spring")) {
-                this.color = "badge badge-pill bg-success";
-            } else if (this.name.equals("HTML/CSS")) {
-                this.color = "badge badge-pill bg-danger";
-            } else if (this.name.equals("JSP")) {
-                this.color = "badge badge-pill bg-warning";
-            } else if (this.name.equals("Java")) {
-                this.color = "badge badge-pill bg-info";
-            } else if (this.name.equals("React")) {
-                this.color = "badge badge-pill bg-dark";
-            } else if (this.name.equals("Vue.js")) {
-                this.color = "badge badge-pill bg-Indigo";
-            } else if (this.name.equals("Oracle")) {
-                this.color = "badge badge-pill bg-brown";
-            } else if (this.name.equals("MySql")) {
-                this.color = "badge badge-pill bg-purple";
+            public SkillDTO(Skill skill) {
+                this.id = skill.getId();
+                this.name = skill.getName();
             }
-            // 추가 양식
-            // else if (this.name.equals("언어")){
-            //      this.color = "badge 컬러 " ;
-
         }
     }
 
@@ -329,6 +377,7 @@ public class ResumeResponse {
         private List<ResumeApplyDTO> applys;
 
     }
+
     @Data
     public static class ResumeApplyDTO {
         private Integer id;
